Update for site generation.